<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_register_number_code_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shadow"
        android:gravity="center"
        android:hint="@string/register_number"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/button_register_next_send_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shadow">

        <TextView
            android:id="@+id/text_view_register_next_send_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/register_next"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/button_register_resend"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shadow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000"
            android:gravity="center"
            android:text="@string/register_resend"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

    </FrameLayout>

</LinearLayout>